# fgc

./: Cargo.toml  README.md
src/: draw.rs  fractal.rs  main.rs
