[package]
name = "fractal-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", features = ["full"] }
crossterm = "0.22.1"
structopt = "0.3"
rand = "0.8"
delaunay_creator = "0.2.4"
